[gd_scene load_steps=5 format=3 uid="uid://bagmkalg5f024"]

[ext_resource type="Script" uid="uid://cl6delaqytfaw" path="res://scripts/objects/dj_deck.gd" id="1_gefnp"]
[ext_resource type="Texture2D" uid="uid://tmthpfjpj7q4" path="res://assets/icons/track_playing_icon.png" id="2_535jm"]
[ext_resource type="Texture2D" uid="uid://cfxe5aftuark" path="res://assets/icons/track_icon.png" id="3_535jm"]
[ext_resource type="Texture2D" uid="uid://dl7p4y3ckukfi" path="res://assets/dj_deck/deck_ring_large.png" id="4_om14m"]

[node name="DjDeck" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_gefnp")

[node name="Vbox" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Vbox"]
layout_mode = 2
alignment = 1

[node name="Lead Tracks" type="VBoxContainer" parent="Vbox/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Track1" type="Button" parent="Vbox/HBoxContainer/Lead Tracks"]
layout_mode = 2
text = "Rock Lead"
icon = ExtResource("2_535jm")

[node name="Track2" type="Button" parent="Vbox/HBoxContainer/Lead Tracks"]
layout_mode = 2
text = "Rock Lead"
icon = ExtResource("3_535jm")

[node name="Track3" type="Button" parent="Vbox/HBoxContainer/Lead Tracks"]
layout_mode = 2
text = "Rock Lead"
icon = ExtResource("3_535jm")

[node name="Track4" type="Button" parent="Vbox/HBoxContainer/Lead Tracks"]
layout_mode = 2
text = "Rock Lead
"
icon = ExtResource("3_535jm")

[node name="LeadsRing" type="TextureProgressBar" parent="Vbox/HBoxContainer"]
layout_mode = 2
fill_mode = 4
texture_under = ExtResource("4_om14m")
texture_over = ExtResource("4_om14m")
tint_over = Color(0, 1, 0, 1)

[node name="DrumNBassRing" type="TextureProgressBar" parent="Vbox/HBoxContainer"]
layout_mode = 2
fill_mode = 4
texture_under = ExtResource("4_om14m")
texture_over = ExtResource("4_om14m")
tint_over = Color(0, 1, 0, 1)

[node name="DrumNBassTracks" type="VBoxContainer" parent="Vbox/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Track1" type="Button" parent="Vbox/HBoxContainer/DrumNBassTracks"]
layout_mode = 2
text = "Rock Drums"
icon = ExtResource("2_535jm")

[node name="Track2" type="Button" parent="Vbox/HBoxContainer/DrumNBassTracks"]
layout_mode = 2
text = "Rock Drums"
icon = ExtResource("3_535jm")

[node name="Track3" type="Button" parent="Vbox/HBoxContainer/DrumNBassTracks"]
layout_mode = 2
text = "Rock Drums"
icon = ExtResource("3_535jm")

[node name="Track4" type="Button" parent="Vbox/HBoxContainer/DrumNBassTracks"]
layout_mode = 2
text = "Rock Drums"
icon = ExtResource("3_535jm")
